# moodle-ws-cli

./: Cargo.toml  README.md
src/: args.rs  main.rs  moodle_helpers.rs
