[package]
name = "moodle-ws-cli"
version = "0.1.0"
edition = "2021"
authors = ["Florian Hye"]
license = "GPLv3"
readme = "README.md"
repository = "https://github.com/Flo2410/moodle-ws-cli"
description = "A simple CLI for moodle written in Rust."


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.4", features = ["derive"] }
moodle = "0.1.0"
serde_json = "1.0.107"
tokio = "1.32.0"
